bases/cosmos/event-horizon/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: event-horizon
  name: event-horizon
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9000
  selector:
    app: event-horizon
  sessionAffinity: None
  type: ClusterIP
