bases/cosmos/event-horizon/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: event-horizon.${cluster_name}.${cluster_location}.bink.sh
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`event-horizon.${cluster_name}.${cluster_location}.bink.sh`) && PathPrefix(`/admin`)
      services:
        - name: event-horizon
          port: 80
